@@ -2302,8 +2302,9 @@ package body Sem_Ch5 is
       Typ : Entity_Id;
 
    begin
-      --  In semantics and Alfa modes, introduce loop variable so that loop
-      --  body can be properly analyzed. Otherwise this is one after expansion.
+      --  In semantics/Alfa modes, we won't be further expanding the loop, so
+      --  introduce loop variable so that loop body can be properly analyzed.
+      --  Otherwise this happens after expansion.
 
       if Operating_Mode = Check_Semantics
         or else Alfa_Mode
